--- a/Arrays/#8.set_matrix_zeros.md
+++ b/Arrays/#8.set_matrix_zeros.md
@@ -15,6 +15,22 @@ Output:
 ]
 ```
 
+**Python**
+``python
+rows = cols = set()
+
+for i in range(len(nums)):
+    for j in range(len(nums[0])):
+        if nums[i][j]==0:
+            rows.add(i)
+            cols.add(j)
+
+for i in range(len(nums)):
+    for j in range(len(nums[0])):
+        if i in rows or j in cols:
+            nums[i][j] = 0
+```
+
 
 **CPP**
 ```cpp
