--- a/Arrays/#11.Max_profits_stock.md
+++ b/Arrays/#11.Max_profits_stock.md
@@ -1,4 +1,4 @@
-# Stock Market - max profit 
+# #11. Stock Market - max profit 
 
 Say you have an array for which the ith element is the price of a given stock on day i.
 If you were only permitted to complete at most one transaction (i.e., buy one and sell one share of the stock), design an algorithm to find the maximum profit.
