--- a/Arrays/#11.Max_profits_stock.md
+++ b/Arrays/#11.Max_profits_stock.md
@@ -26,3 +26,14 @@ int maxProfit(vector<int> prices) {
 	return maxprofit;
 }
 ```
+
+**Python**
+```python
+def maxProfit(self, prices):
+    low = float('inf')
+    profit = 0
+    for c_price in prices:
+        profit = max(profit, c_price-low)
+        low = min(low, c_price)
+    return profit
+``` 
