--- a/Hashing/#01.TwoSum.md
+++ b/Hashing/#01.TwoSum.md
@@ -11,7 +11,8 @@ return [0, 1].
 
 **Python (Best)**
 ```python
-d = {}
+def twoSum(nums, target): 
+    d = {}
     for i,n in enumerate(nums):
         m = target - n
         if m in d:
