--- a/Hashing/#04.Count_SubArray_XOR.md
+++ b/Hashing/#04.Count_SubArray_XOR.md
@@ -16,26 +16,23 @@ Explanation : The subarrays having XOR of
 def xorSubArrays(arr, target_xor):
     ans = 0 
     n = len(arr)
-  
-    xorArr =[0 for _ in range(n)] 
     mp = dict() 
-    xorArr[0] = arr[0] 
   
     for i in range(1, n): 
-        xorArr[i] = xorArr[i - 1] ^ arr[i] 
-
+        arr[i] ^= arr[i - 1]
+  
     for i in range(n): 
-        tmp = target_xor ^ xorArr[i] 
+        tmp = target_xor ^ arr[i] 
   
         if tmp in mp: 
-            ans = ans + mp[tmp]
+            ans += mp[tmp]
   
-        if xorArr[i] == target_xor: 
+        if arr[i] == target_xor: 
             ans += 1
   
-        mp[xorArr[i]] = mp.get(xorArr[i], 0) + 1
-  
-    return ans 
+        mp[arr[i]] = mp.get(arr[i], 0) + 1
+
+    return ans
 ```
 
 Reference: https://www.geeksforgeeks.org/count-number-subarrays-given-xor/
