--- a/LinkedList/#05.DeleteNode.md
+++ b/LinkedList/#05.DeleteNode.md
@@ -11,7 +11,8 @@ Explanation: You are given the second node with value 5, the linked list should 
 **Python**
 ```python
 def deleteNode(self, node):
-    node = node.next
+    node.val = node.next.val
+    node.next = node.next.next
 ```
 
 **CPP**
