--- a/LinkedList/#03.MergeSortedLists.md
+++ b/LinkedList/#03.MergeSortedLists.md
@@ -17,6 +17,24 @@ def mergeTwoLists(self, a, b):
     return a or b
 ```
 
+**Python (Original)**
+```python
+def mergeTwoLists(self, a, b):
+	temp = None
+	if a is None:
+		return b
+	if b is None:
+		return a
+	
+    if a.val <= b.val:
+		temp = a
+		temp.next = self.mergeTwoLists(a.next, b)
+	else:
+		temp = b
+		temp.next = self.mergeTwoLists(a, b.next)
+	
+    return temp
+``
 
 **Python**
 ```python
