--- a/LinkedList/#11.MergeSort.md
+++ b/LinkedList/#11.MergeSort.md
@@ -1,5 +1,13 @@
 # #11. Merge Sort Single Arrays
 
+Given an array, sort it using merge sorting.
+
+Example
+```
+Input: [3, 7, 2, 5, 6]
+Output: [2, 3, 5, 6, 7]
+```
+
 **Python**
 ```python
 def getMiddle(self, head):
