--- a/LinkedList/#12.FlatteningList.md
+++ b/LinkedList/#12.FlatteningList.md
@@ -52,3 +52,142 @@ def flatten(self, head):
 
   return result_node
 ```
+
+
+**Full Python Code**
+```python
+class ListNode:
+	def __init__(self, val=0):
+		self.val = val
+		self.right = None
+		self.down = None
+
+
+class LinkedList():
+	def __init__(self, head=ListNode()):
+		self.head = head
+
+	def displayLayers(self):
+		cur = self.head
+		while cur:
+			print(cur.val),
+			new_cur = cur
+			while new_cur.down:
+				print(new_cur.down.val),
+				new_cur = new_cur.down
+			cur = cur.right
+			print('\n')
+
+	def displayAll(self, head):
+		cur = head
+		elements = []
+		while cur:
+			elements.append(cur.val)
+			cur = cur.next
+		print(elements)
+
+	def getMiddle(self, head):
+		if head is None:
+			return head
+
+		slow = fast = head
+		while fast.next and fast.next.next:
+			slow = slow.next
+			fast = fast.next.next
+
+		return slow
+
+	def mergeTwoLists(self, a, b):
+		temp = None
+
+		if a is None:
+			return b
+		if b is None:
+			return a
+
+		if a.val <= b.val:
+			temp = a
+			a.next = self.mergeTwoLists(a.next, b)
+		else:
+			temp = b
+			b.next = self.mergeTwoLists(a, b.next)
+
+		return temp
+
+	def mergeSort(self, head):
+		if head is None or head.next is None:
+			return head
+
+		middle = self.getMiddle(head)
+		nextMiddle = middle.next
+
+		middle.next = None
+
+		left = self.mergeSort(head)
+		right = self.mergeSort(nextMiddle)
+
+		return self.mergeTwoLists(left, right)
+
+	def mergeTwoListsDown(self, a, b):
+		if a is None: 
+			return b
+		if b is None: 
+			return a
+
+		temp = None
+
+		if a.val <= b.val:
+			temp = a
+			a.down = self.mergeTwoListsDown(a.down, b)
+		else:
+			temp = b
+			b.down = self.mergeTwoListsDown(a, b.down)
+
+		return temp
+
+	def flatten(self, head):
+		if head is None or head.right is None or head.down is None:
+			return head
+		
+		result = right_cur = head
+		
+		while right_cur:
+			result = self.mergeTwoListsDown(result, right_cur.right)
+			right_cur = right_cur.right
+
+		return result
+
+		new_head = result
+		elements = []
+
+		while new_head:
+			elements.append(new_head.val)
+			new_head = new_head.down
+
+		print(elements)
+
+
+a = ListNode(5)
+a.down = ListNode(7)
+a.down.down = ListNode(8)
+a.down.down.down = ListNode(30)
+
+
+b = ListNode(10)
+b.down = ListNode(20)
+
+c = ListNode(19)
+c.down = ListNode(22)
+c.down.down = ListNode(50)
+
+d = ListNode(28)
+d.down = ListNode(35)
+d.down.down = ListNode(40)
+d.down.down.down = ListNode(45)
+
+a.right = b
+b.right = c
+c.right = d
+
+LinkedList().flatten(a)
+```
