--- a/LinkedList/#10.LinkedListCycle.md
+++ b/LinkedList/#10.LinkedListCycle.md
@@ -25,6 +25,28 @@ def hasCycle(self, head):
         return False
 ```
 
+**Python (Similar/Best)**
+```python
+def detectLoop(self, head):
+    if head is None:
+        return None
+
+    temp = ListNode()
+
+    while head:
+        if head.next is None:
+            return head
+
+        if head.next == temp:
+            break
+
+        nex = head.next
+        head.next = temp
+        head = nex
+
+    return head
+```
+
 **Python (Not So Best)**
 ```python
 def hasCycle(self, head):
