--- a/Arrays/#14.Trapping_RainWater.md
+++ b/Arrays/#14.Trapping_RainWater.md
@@ -27,7 +27,7 @@ def trap(nums):
             count += leftmax - nums[a]
             a += 1
         else:
-            count += leftmax - nums[b]
+            count += rightmax - nums[b]
             b -= 1
 
     return count
