--- a/DP/#02.Equal_Sum_Partition.md
+++ b/DP/#02.Equal_Sum_Partition.md
@@ -7,9 +7,11 @@ An array of `arr[] = {6, 1, 9, 4}` can be split as sum of two subsets `{6, 4}` a
 int equalSumPartition(int  arr[], int array_sum, int n) {
 	if (array_sum % 2 != 0)
 		return false;
+		
+	subsetSum(arr[], sum/2, n)
+}
 
-	long sum = array_sum / 2;
-
+int subsetSum(int  arr[], int sum, int n) {
 	int t[n + 1][sum + 1];
 	memset(t, -1, sizeof(t));
 
