--- a/DP/#02.Equal_Sum_Partition.md
+++ b/DP/#02.Equal_Sum_Partition.md
@@ -8,7 +8,7 @@ int equalSumPartition(int  arr[], int array_sum, int n) {
 	if (array_sum % 2 != 0)
 		return false;
 		
-	subsetSum(arr[], sum/2, n)
+	subsetSum(arr, sum/2, n)
 }
 
 int subsetSum(int  arr[], int sum, int n) {
