--- a/DP/#03.Count_Subsets_Sum.md
+++ b/DP/#03.Count_Subsets_Sum.md
@@ -7,6 +7,9 @@ arr[] = {6, 3 , 1 , 9};
 sum = 10;
 ```
 
+Here, we change the `||` symbol to `+` and hence count the total counts.
+
+**CPP**
 ```cpp
 int countSubsets(int  arr[], int sum, int n) {
 	int t[n + 1][sum + 1];
