--- a/DP/#04.Minimum_Subset_Difference.md
+++ b/DP/#04.Minimum_Subset_Difference.md
@@ -7,7 +7,7 @@ input: arr[] = {2, 10, 1};
 output: 10 - 3 = 7
 ```
 
-**CPP - DP**
+**CPP - DP (My Method)**
 ```cpp
 void subsetSum(int  arr[], int sum, int n) {
 	int t[n + 1][sum + 1];
