--- a/DP/#05.Subsets_count_difference.md
+++ b/DP/#05.Subsets_count_difference.md
@@ -2,7 +2,53 @@
 
 Given an array of numbers, generate subsets S1 and S2 such that S1 U S2 = S and has S1 - S2 = difference.
 
+Concept
+```
+S1 + S2 = sum(array)
+S1 - S2 = diff
+
+Adding both, S1 = (array_sum + diff) / 2
+```
+
 **CPP - DP**
 ```cpp
+int countSubsets(int  arr[], int sum, int n) {
+	int t[n + 1][sum + 1];
+	memset(t, -1, sizeof(t));
 
+	for (int i = 0; i < n + 1; i++)
+		for (int j = 0; j < sum + 1; j++) {
+			if (i == 0)
+				t[i][j] = 0;
+			if (j == 0)
+				t[i][j] = 1;
+		}
+
+	for (int i = 1; i < n + 1; i++)
+		for (int j = 1; j < sum + 1; j++) {
+			if (arr[i - 1] <= j)
+				t[i][j] = t[i - 1][j - arr[i - 1]] + t[i - 1][j];
+			else
+				t[i][j] = t[i - 1][j];
+		}
+
+	return t[n][sum];
+}
+
+int main() {
+	int arr[] = {1, 3, 2, 1};
+	int n = sizeof(arr) / sizeof(arr[0]);
+
+	int diff = 3, arr_sum = 0;
+	for (auto ar : arr)
+		arr_sum += ar;
+
+	if ((arr_sum + diff) % 2 != 0)
+		return 0;
+
+	int sum = (arr_sum + diff) / 2;
+	cout << countSubsets(arr, sum, n);
+
+	return 0;
+}
 ```
