--- a/DP/#07.RodCutting_Profit.md
+++ b/DP/#07.RodCutting_Profit.md
@@ -7,6 +7,7 @@ length   | 1   2   3   4   5   6   7   8
 price    | 1   5   8   9  10  17  17  20
 
 Maximise profit for length, P = 8
+Eg. length of the rod is 8 => maximum obtainable value is 22 (pieces of lengths 2 and 6)
 ```
 
 **CPP - DP (Unbounded)**
