--- a/DP/#08.Count_Coints.md
+++ b/DP/#08.Count_Coints.md
@@ -31,3 +31,19 @@ int countCoins(int coin[], int sum, int n) {
 	return t[n][sum];
 }
 ```
+
+**Top-Down Apprach**
+```cpp
+int countCoins(int coin[], int sum, int n) {
+	if (n >= 0 && sum == 0)
+		return 1;
+
+	if (n == 0 && sum > 0)
+		return 0;
+
+	if (coin[n - 1] <= sum)
+		return countCoins(coin, sum - coin[n - 1], n) + countCoins(coin, sum, n - 1);
+
+	return countCoins(coin, sum, n - 1);
+}
+```
