--- a/DP/#08.Count_Coints.md
+++ b/DP/#08.Count_Coints.md
@@ -32,7 +32,7 @@ int countCoins(int coin[], int sum, int n) {
 }
 ```
 
-**Top-Down Apprach**
+**Top-Down Approach**
 ```cpp
 int countCoins(int coin[], int sum, int n) {
 	if (n >= 0 && sum == 0)
