--- a/DP/#09.Min_Coins.md
+++ b/DP/#09.Min_Coins.md
@@ -28,3 +28,28 @@ int minCoins(int coin[], int sum, int n) {
 
 }
 ```
+
+**CPP - Tabulation**
+```cpp
+int minCoins(int coin[], int sum, int n) {
+	int t[n + 1][sum + 1];
+
+	for (int i = 0; i < n + 1; i++)
+		for (int j = 0; j < sum + 1; j++) {
+			if (i == 0)
+				t[i][j] = INT_MAX - 1;
+			if (j == 0)
+				t[i][j] = 0;
+		}
+
+	for (int i = 1; i < n + 1; i++)
+		for (int j = 1; j < sum + 1; j++) {
+			if (coin[i - 1] <= j)
+				t[i][j] = min(1 + t[i][j - coin[i - 1]] , t[i - 1][j]);
+			else
+				t[i][j] = t[i - 1][j];
+		}
+
+	return t[n][sum];
+}
+```
