Update and rename #10.LargestCommonSubstring.md to #10.LargestCommonInString.md

--- a/DP/#10.LargestCommonInString.md
+++ b/DP/#10.LargestCommonInString.md
@@ -1,4 +1,4 @@
-# #10. Largest Common Substring
+# #10. Largest Common in String
 
 Given two strings text1 and text2, return the length of their longest common subsequence.
 
