--- a/DP/#10.LargestCommonInString.md
+++ b/DP/#10.LargestCommonInString.md
@@ -20,6 +20,24 @@ int matchSubstring(string a, string b, int m, int n) {
 }
 ```
 
+**CPP (Tabulation) DP**
+```cpp
+int commonString(string a, string b, int m, int n) {
+	int t[m + 1][n + 1];
+
+	for (int i = 0; i < m + 1; i++)
+		for (int j = 0; j < n + 1; j++)
+			if (i == 0 || j == 0)
+				t[i][j] = 0;
+			else if (a[i - 1] == b[j - 1])
+				t[i][j] = 1 + t[i - 1][j - 1];
+			else
+				t[i][j] = max(t[i - 1][j], t[i][j - 1]);
+
+	return t[m][n];
+}
+```
+
 **CPP - DP (Tabulation)**
 ```cpp
 int matchSubstring(string a, string b, int m, int n) {
