--- a/DP/#10.LargestCommonInString.md
+++ b/DP/#10.LargestCommonInString.md
@@ -78,3 +78,35 @@ int countCommon(string a, string b, int m, int n) {
 	return best_count;
 }
 ```
+## Print Longest Subtring
+
+**CPP**
+```cpp
+string countCommon(string a, string b, int m, int n) {
+	int t[m + 1][n + 1];
+	int best_count = 0;
+
+	for (int i = 1; i < m + 1; i++)
+		for (int j = 1; j < n + 1; j++)
+			if (a[i - 1] == b[j - 1]) {
+				t[i][j] = 1 + t[i - 1][j - 1];
+				best_count = max(t[i][j], best_count);
+			}
+			else
+				t[i][j] = 0;
+
+	int i = m, j = n;
+	string output = "";
+
+	while (i > 0 && j > 0) {
+		if (a[i - 1] == b[i - 1]) {
+			output.push_back(a[i - 1]);
+			i--; j--;
+		} else
+			t[i][j - 1] > t[i - 1][j] ? j-- : i--;
+	}
+	reverse(output.begin(), output.end());
+
+	return output;
+}
+```
