--- a/Backtracking/#02.NQueen_PrintAll.md
+++ b/Backtracking/#02.NQueen_PrintAll.md
@@ -41,3 +41,47 @@ vector<vector<string>> solveNQueens(int N) {
     return res;
 }
 ```
+
+**Alternate - CPP**
+```cpp
+bool isSafe(vector<string> board, int row, int col, int N) {
+	int i, j;
+
+	//check left of one col	
+	for (j = 0; j < col; j++)
+		if (board[row][j] == 'Q')
+			return false;
+
+	//check 135 back i--,j--
+	for (i = row, j = col; i >= 0 && j >= 0; i--, j--)
+		if (board[i][j] == 'Q')
+			return false;
+		
+	//bottom left diagonals i++,j--
+	for (i = row, j = col; i < N && j >= 0 ; i++, j--)
+		if (board[i][j] == 'Q')
+			return false;
+
+	return true;
+}
+
+
+bool solveNQ(vector<string>& board, int col, int N, vector<vector<string>> res) {
+	if (col >= N) {
+		res.push_back(board);
+		return true;
+	}
+
+	bool res_flag = false;
+	for (int row = 0; row < N; row++) {
+		if (isSafe(board, row, col, N)) {
+			board[row][col] = 'Q';
+			res_flag = solveNQ(board, col + 1, N, res) || res_flag;
+
+			board[row][col] = '.';
+		}
+	}
+
+	return res_flag;
+}
+```
