--- a/Backtracking/#03.Sudoku_Validity.md
+++ b/Backtracking/#03.Sudoku_Validity.md
@@ -2,10 +2,8 @@
 
 Given a partially filled 9×9 2D array, the goal is to assign digits (from 1 to 9) to the empty cells so that every row, column, and subgrid of size 3×3 contains exactly one instance of the digits from 1 to 9.
 
-**CPP - Backtracking**
-```cpp
-
-```
+**CPP - Backtracking**<br>
+Link: https://www.geeksforgeeks.org/sudoku-backtracking-7/
 
 **CPP - Arrays**
 ```cpp
