--- a/Backtracking/#04.mColoring.md
+++ b/Backtracking/#04.mColoring.md
@@ -14,8 +14,65 @@ Output:
 Following are the assigned colors
  1  2  3  2
  ```
+ 
+ **CPP - Backtracking**
+ ```cpp
+ #define V 4
 
-**Simple Way**
+void printSolution(int color[V]) {
+	for (int i = 0; i < V; i++)
+		cout << color[i] << " ";
+}
+
+bool isSafe(bool graph[V][V], int i, int color[V], int c) {
+	for (int j = 0; j < V; j++) {
+		if (graph[i][j] && color[j] == c)
+			return false;
+	}
+
+	return true;
+}
+
+bool graphColoring(bool graph[V][V], int m, int i, int color[V]) {
+	if (i == V) {
+		printSolution(color);
+		return true;
+	}
+
+	for (int c = 1; c <= m; c++) {
+		if (isSafe(graph, i, color, c)) {
+			color[i] = c;
+
+			if (graphColoring(graph, m, i + 1, color))
+				return true;
+
+			color[i] = 0;
+		}
+	}
+
+	return false;
+}
+
+int main() {
+	bool graph[V][V] = {
+		{ 0, 1, 1, 1 },
+		{ 1, 0, 1, 0 },
+		{ 1, 1, 0, 1 },
+		{ 1, 0, 1, 0 },
+	};
+
+	int color[V];
+	memset(color, 0, sizeof(V));
+
+	//no of colors
+	int m = 3;
+	graphColoring(graph, m, 0, color);
+
+	return 0;
+}
+ ```
+
+**Alternate Way**
 ```cpp
 #define V 4
 
