--- a/Backtracking/#05.Rate_In_Maze.md
+++ b/Backtracking/#05.Rate_In_Maze.md
@@ -14,7 +14,58 @@ Output : DRDDRR
 
 **CPP - Backtracking**
 ```cpp
+#define N 4
 
+void printSolution(int visited[N][N]) {
+	for (int i = 0; i < N; i++) {
+		for (int j = 0; j < N; j++)
+			cout << visited[i][j] << " ";
+		cout << endl;
+	}
+}
+
+bool isSafe(int maze[N][N], int row, int col) {
+	if (row >= 0 && row < N && col >= 0 && col < N && maze[row][col])
+		return true;
+	return false;
+}
+
+bool solveMaze(int row, int col, int maze[N][N], int visited[N][N]) {
+	if (row == N - 1 && col == N - 1 && maze[row][col]) {
+		visited[row][col] = 1;
+		printSolution(visited);
+		return true;
+	}
+
+	if (isSafe(maze, row, col)) {
+		visited[row][col] = 1;
+
+		if (solveMaze(row + 1, col, maze, visited))
+			return true;
+
+		if (solveMaze(row, col + 1, maze, visited))
+			return true;
+
+		visited[row][col] = 0;
+	}
+
+	return false;
+}
+
+int main() {
+	int maze[N][N] = { { 1, 0, 0, 0 },
+		{ 1, 1, 0, 1 },
+		{ 0, 1, 0, 0 },
+		{ 1, 1, 1, 1 }
+	};
+
+	int visited[N][N];
+	memset(visited, 0, sizeof(visited));
+
+	solveMaze(0, 0, maze, visited);
+
+	return 0;
+}
 ```
 
 **CPP - Alternate Way**
