--- a/Arrays/#06.maximum_subarray.md
+++ b/Arrays/#06.maximum_subarray.md
@@ -5,14 +5,38 @@ Input: [-2,1,-3,4,-1,2,1,-5,4],
 Output: 6
 ```
 
+**CPP - Kadence Algorithm**
+```cpp
+int lss(vector<int> arr) {
+	int max_so_far = INT_MIN, max_ending_here = 0;
+
+	for (int i = 0; i < arr.size() ; i++) {
+		max_ending_here += arr[i];
+
+		if (max_so_far < max_ending_here)
+			max_so_far = max_ending_here;
+
+		if (max_ending_here < 0)
+			max_ending_here = 0;
+	}
+
+	return max_so_far;
+}
+```
+
 **CPP (Best)**
 ```cpp
-int findMaxSum(vector<int> nums) {
-	for (int i = 1; i < nums.size(); i++)
-		if (nums[i - 1] > 0)
-			nums[i] += nums[i - 1];
+int lss(vector<int> arr) {
+	int max_sum = INT_MIN;
 
-	return *max_element(nums.begin(), nums.end());
+	for (int i = 1; i < arr.size(); i++) {
+		if (arr[i - 1] > 0) {
+			arr[i] += arr[i - 1];
+			max_sum = max(arr[i], max_sum);
+		}
+	}
+
+	return max_sum;
 }
 ```
 
