--- a/Arrays/#06.maximum_subarray.md
+++ b/Arrays/#06.maximum_subarray.md
@@ -5,6 +5,8 @@ Input: [-2,1,-3,4,-1,2,1,-5,4],
 Output: 6
 ```
 
+Link: https://www.geeksforgeeks.org/largest-sum-contiguous-subarray/
+
 **CPP - Kadence Algorithm**
 ```cpp
 int lss(vector<int> arr) {
