--- a/LinkedList/#01.ReverseList.md
+++ b/LinkedList/#01.ReverseList.md
@@ -5,6 +5,19 @@ Input: 1->2->3->4->5->NULL
 Output: 5->4->3->2->1->NULL
 ```
 
+**CPP**
+```cpp
+Node* reverseLL(Node *root, Node *prev = NULL) {
+	if (root == NULL) return prev;
+
+	Node *temp = root->next;
+	root->next = prev;
+	prev = root;
+
+	return reverseLL(temp, prev);
+}
+```
+
 **Python**
 ```python
 def reverseList(self):
