--- a/Tree/Self-Balancing-Tree/#03.LeftView.md
+++ b/Tree/Self-Balancing-Tree/#03.LeftView.md
@@ -10,6 +10,22 @@
 Ouput: 7 2 4 3
 ```
 
+**Code - CPP**
+```cpp
+void leftView(Node *root, int level, int max_level) {
+	if (root == NULL) return;
+
+	if (max_level < level) {
+		cout << root->key << " ";
+		max_level = level;
+	}
+
+	leftView(root->left, level + 1, max_level);
+	leftView(root->right, level - 1, max_level);
+}
+```
+
+**Alternate - CPP**
 ```cpp
 vector<int> leftView(Node *root) {
 	if (root == NULL) return {};
