--- a/Recursion/#03.MInCostPath.md
+++ b/Recursion/#03.MInCostPath.md
@@ -11,6 +11,7 @@ int cost[R][C] =
 
 <img src="https://www.geeksforgeeks.org/wp-content/uploads/dp2.png">
 
+**Code - CPP*
 ```cpp
 #define C 3
 #define R 4
