--- a/LinkedList/#10.LinkedListCycle.md
+++ b/LinkedList/#10.LinkedListCycle.md
@@ -10,6 +10,27 @@ Explanation: There is a cycle in the linked list, where tail connects to the sec
 
 <img src="https://assets.leetcode.com/uploads/2018/12/07/circularlinkedlist.png"><br><br>
 
+**CPP**
+```cpp
+bool hasCycle(Node *root) {
+	if (root == NULL) return false;
+
+	Node *slow, *fast;
+	slow = fast = root;
+
+	while (slow && fast && fast->next) {
+		slow = slow->next;
+		fast = fast->next->next;
+
+		if (slow == fast) {
+			return true;
+		}
+	}
+
+	return false;
+}
+```
+
 **Python**
 ```python
 def hasCycle(self, head):
