--- a/Arrays/#10.pascals_triangle.md
+++ b/Arrays/#10.pascals_triangle.md
@@ -14,31 +14,32 @@ Output:
 
 **CPP**
 ```cpp
-class Solution {
-public:
-    vector<vector<int>> generate(int n) {
-        vector<vector<int>> nums;
-        getPascalTriangle(n, nums);
-        reverse(nums.begin(), nums.end());
-        
-        return nums;
-    }
-    
-    void getPascalTriangle(int n, vector<vector<int>> &result) {
-        if (n == 1)
-            result.push_back({1});
-        else {
-            int val = pow(11 , n - 1);
-            vector<int> nested_vect;
-
-            while (val % 10 != 0) {
-                nested_vect.push_back(val % 10);
-                val /= 10;
-            }
-
-            result.push_back(nested_vect);
-            getPascalTriangle(--n, result);
-        }
-    }
-};
+void pascal(int n) {
+	if (n == 1) {
+		cout << 1 << endl;
+		return;
+	}
+	
+	int p[n][n];
+	p[0][0] = 1;
+	p[1][0] = 1;
+	p[1][1] = 1;
+	
+	int prev = 1;
+	for (int i = 2; i < n; i++) {
+		p[i][0] = 1;
+		for (int j = 1; j < i; j++) {
+			p[i][j] = p[prev][j - 1] + p[prev][j];
+		}
+		p[i][i] = 1;
+		prev = i;
+	}
+	
+	for (int i = 0; i < n; i++) {
+		for (int j = 0; j <= i; j++) {
+			cout << p[i][j] << "\t";
+		}
+		cout << endl;
+	}
+}
 ```
