--- a/LinkedList/#01.ReverseList.md
+++ b/LinkedList/#01.ReverseList.md
@@ -18,6 +18,20 @@ Node* reverseLL(Node *root, Node *prev = NULL) {
 }
 ```
 
+```cpp
+ListNode* reverseNodes(ListNode *head) {
+	ListNode *prev = NULL;
+	while (head != NULL) {
+		ListNode *temp = head->next;
+		head->next = prev;
+		prev = head;
+		head = temp;
+	}
+
+	return prev;
+}
+```
+
 **Python**
 ```python
 def reverseList(self):
