--- a/Arrays/#06.maximum_subarray.md
+++ b/Arrays/#06.maximum_subarray.md
@@ -28,6 +28,21 @@ int lss(vector<int> arr) {
 
 **CPP (Best)**
 ```cpp
+int maxSubArray(vector<int>& nums, int n) {
+    int sum = 0;
+    int maxsum = INT_MIN;
+
+    for (int num : nums) {
+        sum += num;
+        maxsum = max(maxsum, sum);
+        if (sum < 0) sum = 0;
+    }
+    return maxsum;
+}
+```
+
+**CPP (Best)**
+```cpp
 int lss(vector<int> arr) {
 	int max_sum = INT_MIN;
 
