--- a/LinkedList/#03.MergeSortedLists.md
+++ b/LinkedList/#03.MergeSortedLists.md
@@ -17,6 +17,27 @@ def mergeTwoLists(self, a, b):
     return a or b
 ```
 
+```cpp
+ListNode* mergeTwoLists(ListNode* list1, ListNode* list2) {
+        ListNode *newHead = new ListNode();
+        ListNode *startHead = newHead;
+        
+        while(list1 && list2){
+            if(list1->val <= list2->val){
+                newHead->next = list1;
+                list1 = list1->next;
+            }else{
+                newHead->next = list2;
+                list2 = list2->next;
+            }
+            newHead = newHead -> next;
+        }
+        
+        newHead->next = list1 ? list1: list2;
+        return startHead -> next;
+    }
+```
+
 **Python (Original)**
 ```python
 def mergeTwoLists(self, a, b):
