--- a/Strings/#08.PermutationInString.md
+++ b/Strings/#08.PermutationInString.md
@@ -9,11 +9,14 @@ Explanation: s2 contains one permutation of s1 ("ba").
 
 ```cpp
 bool checkInclusion(string s1, string s2) {
-    // printAllPermutations(s1, 0, s1.size() - 1);
+	//creating two vector to hold s1 and s2 chars
     vector<int> cur1(26), cur2(26);
+	//adding chars of s1 to cur1
     for (char ch : s1)
         cur1[ch - 'a']++;
 
+	//basic sliding window - create a window size s1.size() and
+	//add end element and delete starting element.
     for (int i = 0; i < s2.size(); ++i) {
         cur2[s2[i] - 'a']++;
         if (i >= s1.size()) {
