--- a/Arrays/#22.FindFirstandLastPositionofElementinSortedArray.md
+++ b/Arrays/#22.FindFirstandLastPositionofElementinSortedArray.md
@@ -5,6 +5,45 @@ Input: nums = [5,7,7,8,8,10], target = 8
 Output: [3,4]
 ```
 
+**Easier**
+```cpp
+vector<int> searchRange(vector<int>& nums, int target) {
+    int n = nums.size();
+
+    int lo, hi;
+
+    int firstPos = -1, endPos = -1;
+
+    lo = 0, hi = n - 1;
+    while (lo <= hi) {
+        int mid = lo + (hi - lo) / 2;
+        if (nums[mid] == target) {
+            firstPos = mid;
+            hi = mid - 1;
+        } else if (nums[mid] < target)
+            lo = mid + 1;
+        else
+            hi = mid - 1;
+    }
+
+    lo = 0 hi = n - 1;
+    while (lo <= hi) {
+        int mid = lo + (hi - lo) / 2;
+        if (nums[mid] == target) {
+            endPos = mid;
+            lo = mid + 1;
+        } else if (nums[mid] < target)
+            lo = mid + 1;
+        else
+            hi = mid - 1;
+    }
+
+    vector<int> v {firstPos, endPos};
+    return v;
+}
+```
+
+**Takes time to understand**
 ```cpp
 #define pbv pair<bool, vector<int>>
 
