--- a/Arrays/#23.FindNumberOfRotationsOfSortedArray.md
+++ b/Arrays/#23.FindNumberOfRotationsOfSortedArray.md
@@ -19,7 +19,7 @@ int findMinIndex(vector<int>& nums) {
         int next = (mid + 1) % n;
         
         //special condition to check if pivot no. is minimum
-        if (nums[mid] < nums[prev] && nums[mid] <= nums[next]) {
+        if (nums[mid] <= nums[prev] && nums[mid] <= nums[next]) {
             return mid;
         } else if (nums[mid] < nums[hi]) //min no is always in unsorted array
             lo = mid + 1;
