--- a/Arrays/#23.FindNumberOfRotationsOfSortedArray.md
+++ b/Arrays/#23.FindNumberOfRotationsOfSortedArray.md
@@ -7,7 +7,7 @@ rotated - [5,6,7,8,1,2,3,4]
 Output -> 4 (no of rotations)
 ```
 
-
+**Method 1**
 ```cpp
 //number of rotations = index of smallest number
 int findMinIndex(vector<int>& nums) {
@@ -27,5 +27,21 @@ int findMinIndex(vector<int>& nums) {
             hi = mid;
     }
     return -1;
+}
+```
+
+**Method 2**
+```cpp
+int findMinIndex(vector<int>& nums) {
+    int n = nums.size();
+    int lo = 0, hi = n - 1;
+    while (lo < hi) {
+        int mid = lo + (hi - lo) / 2;
+        if (nums[mid] > nums[hi])
+            lo = mid + 1;
+        else
+            hi = mid;
+    }
+    return lo;
 }
 ```
