--- a/Arrays/#24.SearchinRotatedSortedArray.md
+++ b/Arrays/#24.SearchinRotatedSortedArray.md
@@ -7,6 +7,43 @@ Input: nums = [4,5,6,7,0,1,2], target = 0
 Output: 4
 ```
 
+**Easier**
+```cpp
+int findMinIndex(vector<int>& nums) {
+    int n = nums.size();
+    int lo = 0, hi = n - 1;
+    while (lo < hi) {
+        int mid = lo + (hi - lo) / 2;
+        if (nums[mid] > nums[hi])
+            lo = mid + 1;
+        else
+            hi = mid;
+    }
+    return lo;
+}
+
+int search(vector<int>& nums, int target) {
+    int rotIndex = findMinIndex(nums);
+
+    int n = nums.size();
+    int lo = 0, hi = nums.size() - 1;
+
+    while (lo <= hi) {
+        int mid = lo + (hi - lo) / 2;
+        int realmid = (mid + rotIndex) % n;
+        if (nums[realmid] == target)
+            return realmid;
+        if (nums[realmid] < target)
+            lo = mid + 1;
+        else
+            hi = mid - 1;
+    }
+
+    return -1;
+}
+```
+
+**Alternative**
 ```cpp
 //find the least number index
 int findMinIndex(vector<int>& nums) {
@@ -16,7 +53,7 @@ int findMinIndex(vector<int>& nums) {
         int mid = lo + (hi - lo) / 2;
         int prev = (mid - 1 + n) % n;
         int next = (mid + 1) % n;
-        if (nums[mid] < nums[prev] && nums[mid] <= nums[next]) {
+        if (nums[mid] <= nums[prev] && nums[mid] <= nums[next]) {
             return mid;
         } else if (nums[mid] < nums[hi])
             lo = mid + 1;
