--- a/Arrays/#27.AllocateMinimumNoOfPages.md
+++ b/Arrays/#27.AllocateMinimumNoOfPages.md
@@ -24,7 +24,7 @@ in following fashion :
 Of the 3 cases, Option 3 has the minimum pages = 113. 
 ```
 
-**CPP**
+**CPP (Binary Search)**
 ```
 bool isValid(vector<int>& nums, int noOfStudents, int sepPages) {
     // cout << sepPages << endl;
@@ -67,5 +67,36 @@ int findPages(vector<int>& nums, int noOfStudents) {
     }
 
     return res == -1 ? -1 : sum - res;
+}
+```
+
+**Recursion (CPP)***
+```
+int findPages(vector<int>& nums, int maxStudents, int sepSum, int sepPos, int totSum) {
+    int n = nums.size();
+    if (n < maxStudents) return INT_MAX;
+    if (sepPos == n) return INT_MAX;
+
+    int k = 1, sum = 0;
+    for (int num : nums) {
+        sum += num;
+        if (sum >= sepSum) {
+            k++;
+            sum = num;
+            if (k < maxStudents)
+                return INT_MAX;
+        }
+    }
+    return min(totSum - sepSum,
+               totSum - findPages(nums, maxStudents, sepSum + nums[sepPos + 1], sepPos + 1, totSum));
+}
+
+int main() {
+    vector<int> nums = {12, 34, 67, 90};
+    int maxStudents = 2;
+    int sum = 0;
+    for (int num : nums) sum += num;
+    cout << findPages(nums, maxStudents, nums[0], 0, sum);
+    return 0;
 }
 ```
