--- a/Arrays/#27.AllocateMinimumNoOfPages.md
+++ b/Arrays/#27.AllocateMinimumNoOfPages.md
@@ -25,7 +25,7 @@ Of the 3 cases, Option 3 has the minimum pages = 113.
 ```
 
 **CPP (Binary Search)**
-```
+```cpp
 bool isValid(vector<int>& nums, int noOfStudents, int sepPages) {
     // cout << sepPages << endl;
     int sum = 0, k = 1;
@@ -71,7 +71,7 @@ int findPages(vector<int>& nums, int noOfStudents) {
 ```
 
 **Recursion (CPP)***
-```
+```cpp
 int findPages(vector<int>& nums, int maxStudents, int sepSum, int sepPos, int totSum) {
     int n = nums.size();
     if (n < maxStudents) return INT_MAX;
