--- a/Backtracking/#8.PrintAllSubsets.md
+++ b/Backtracking/#8.PrintAllSubsets.md
@@ -4,6 +4,30 @@
 Input: ABC
 Output: A B AB C AC BC ABC
 ```
+**Backtracking**
+```cpp
+string generate(string nums, string ans = "", int pos = 0) {
+    for (int i = pos; i < nums.size(); i++) {
+        ans += nums[i];
+        cout << generate(nums, ans, i + 1) << endl;
+        ans.pop_back();
+    }
+    return ans;
+}
+```
+
+**Using recursive Backtracking**
+```cpp
+void allSubsets(string s, int n, int pos, string ans = "") {
+    if (pos >= n) {
+        cout << ans << endl;
+        return;
+    }
+
+    allSubsets(s, n, pos + 1, ans);
+    allSubsets(s, n, pos + 1, ans + s[pos]);
+}
+```
 
 **Using Bitmask**
 ```cpp
@@ -18,18 +42,5 @@ void allSubsets(string s) {
         }
         cout << sub << endl;
     }
-}
-```
-
-**Using Backtracking**
-```cpp
-void allSubsets(string s, int n, int pos, string ans = "") {
-    if (pos >= n) {
-        cout << ans << endl;
-        return;
-    }
-
-    allSubsets(s, n, pos + 1, ans);
-    allSubsets(s, n, pos + 1, ans + s[pos]);
 }
 ```
