--- a/Backtracking/#8.PrintAllSubsets.md
+++ b/Backtracking/#8.PrintAllSubsets.md
@@ -6,10 +6,10 @@ Output: A B AB C AC BC ABC
 ```
 **Backtracking**
 ```cpp
-string generate(string nums, string ans = "", int pos = 0) {
-    for (int i = pos; i < nums.size(); i++) {
-        ans += nums[i];
-        cout << generate(nums, ans, i + 1) << endl;
+string generate(string s, string ans = "", int pos = 0) {
+    for (int i = pos; i < s.size(); i++) {
+        ans += s[i];
+        cout << generate(s, ans, i + 1) << endl;
         ans.pop_back();
     }
     return ans;
