--- a/Backtracking/#9.PrintAllSubsetsNoDuplicates.md
+++ b/Backtracking/#9.PrintAllSubsetsNoDuplicates.md
@@ -8,7 +8,8 @@ Output: [[],[1],[1,2],[1,2,2],[2],[2,2]]
 
 ```cpp
 vector<vector<int>> ans;
-vector<int> subset;
+vector<int> subset; //will be commonly used for all subsets 
+// (do not initialize everytime = {} )
 
 void generate(vector<int>& nums, int pos) {
     for (int i = pos; i < nums.size(); i++) {
