--- a/Backtracking/#9.PrintAllSubsetsNoDuplicates.md
+++ b/Backtracking/#9.PrintAllSubsetsNoDuplicates.md
@@ -13,11 +13,12 @@ vector<int> subset; //will be commonly used for all subsets
 
 void generate(vector<int>& nums, int pos) {
     for (int i = pos; i < nums.size(); i++) {
-        if (i == pos || nums[i] != nums[i - 1]) {
-            subset.push_back(nums[i]);
-            generate(nums, i + 1);
-            subset.pop_back();
-        }
+        if (i > pos && nums[i] == nums[i - 1])
+            continue;
+        
+        subset.push_back(nums[i]);
+        generate(nums, i + 1);
+        subset.pop_back();
     }
     ans.push_back(subset);
 }
