--- a/Arrays/#09.next_permutation.md
+++ b/Arrays/#09.next_permutation.md
@@ -6,6 +6,36 @@
 1,1,5 → 1,5,1
 ```
 
+```cpp
+void nextPermutation(vector<int>& nums) {
+    if (nums.size() == 1) return;
+
+    int n = nums.size();
+    int lo = -1;
+    for (int i = n - 1; i >= 1; i--) {
+        if (nums[i] > nums[i - 1]) {
+            lo = i - 1;
+            break;
+        }
+    }
+
+    if (lo == -1) {
+        reverse(nums.begin(), nums.end());
+    } else {
+        int hi = -1;
+        for (int i = lo + 1; i < n; i++)
+            if (nums[i] > nums[lo])
+                hi = i;
+        swap(nums[hi], nums[lo]);
+        sort(nums.begin() + lo + 1, nums.end());
+    }
+
+    printVectors(nums);
+}
+```
+
+OR
+
 **CPP (Best)**
 ```cpp
 void nextPermutation(vector<int> &nums) {
