--- a/Math/#09.CountNumberswithUniqueDigits.md
+++ b/Math/#09.CountNumberswithUniqueDigits.md
@@ -8,6 +8,7 @@ Output: 91
 Explanation: The answer should be the total numbers in the range of 0 ≤ x < 100, excluding 11,22,33,44,55,66,77,88,99
 ```
 
+**Math**
 ```cpp
 int countNumbersWithUniqueDigits(int n) {
     if (n == 0)
@@ -20,5 +21,21 @@ int countNumbersWithUniqueDigits(int n) {
         res += b;
     }
     return res;
+}
+```
+
+**Using Backtracking**
+```cpp
+int generate(int n, int idx, set<int>& used) {
+    if (n == idx) return 1;
+    int count = 1;
+    for (int i = (idx == 0 ? 1 : 0); i <= 9; ++i) {
+        if (used.find(i) == used.end()) {
+            used.insert(i);
+            count += generate(n, idx + 1, used);
+            used.erase(i);
+        }
+    }
+    return count;
 }
 ```
