--- a/LinkedList/#16.MergeKSortedLists.md
+++ b/LinkedList/#16.MergeKSortedLists.md
@@ -37,36 +37,12 @@ ListNode* mergeKLists(vector<ListNode*>& lists) {
         }
         len = (len + 1) / 2;
     }
+    //(OR -- do it long way)
+    //while(lists.size() > 1){
+    //    lists.push_back(mergeTwoLists(lists[0], lists[1]));
+    //    lists.erase(lists.begin());
+    //    lists.erase(lists.begin());
+    //}
     return lists.front();
-}
-```
-OR
-```cpp
-ListNode *mergeKLists(vector<ListNode *> &lists) {
-    if(lists.empty()){
-        return nullptr;
-    }
-    while(lists.size() > 1){
-        lists.push_back(mergeTwoLists(lists[0], lists[1]));
-        lists.erase(lists.begin());
-        lists.erase(lists.begin());
-    }
-    return lists.front();
-}
-ListNode *mergeTwoLists(ListNode *l1, ListNode *l2) {
-    if(l1 == nullptr){
-        return l2;
-    }
-    if(l2 == nullptr){
-        return l1;
-    }
-    if(l1->val <= l2->val){
-        l1->next = mergeTwoLists(l1->next, l2);
-        return l1;
-    }
-    else{
-        l2->next = mergeTwoLists(l1, l2->next);
-        return l2;
-    }
 }
 ```
