--- a/Tree/#06.MaxWidth.md
+++ b/Tree/#06.MaxWidth.md
@@ -1,5 +1,41 @@
-## #6. Max width of Tree
+## #6. Width of Tree
 
+<img src="https://assets.leetcode.com/uploads/2021/05/03/width1-tree.jpg">
+
+```cpp
+int widthOfBinaryTree(TreeNode* root) {
+    if (root == NULL) return 1;
+
+    int maxWidth = 0;
+    queue<pair<TreeNode*, int>> q;
+    q.push({root, 1});
+
+    while (!q.empty()) {
+        int n = q.size();
+
+        int start = q.front().second;
+        int end = q.back().second;
+        maxWidth = max(maxWidth, end - start + 1);
+
+        while (n--) {
+            TreeNode* temp = q.front().first;
+
+            int position = q.front().second;
+            int offset = position - start;
+            q.pop();
+
+            if (temp->left)
+                q.push({temp->left, 2 * offset});
+            if (temp->right)
+                q.push({temp->right, 2 * offset + 1});
+        }
+    }
+    return maxWidth;
+}
+```
+
+##### Below code
+- Checks only count of nodes at current level
 ```cpp
 int maxWidth(Node *root) {
 	if (root == NULL) return 0;
