--- a/Graph/#01.FindifPathExists.md
+++ b/Graph/#01.FindifPathExists.md
@@ -1,5 +1,7 @@
 #### #1. Find If Path Exists
 
+Given a source and a destination in the node (0->n-1), find if a path exists between them in the graph.
+
 ![image](https://user-images.githubusercontent.com/27401142/156968982-d7049e8b-3db4-4ba9-af24-7c6ae8683165.png)
 
 Leetcode Link: https://leetcode.com/problems/find-if-path-exists-in-graph/
