--- a/LinkedList/#17.CopyListRandomPointer.md
+++ b/LinkedList/#17.CopyListRandomPointer.md
@@ -1,6 +1,7 @@
 ### #17. Copy List with Random Pointer
 
 Leetcode: https://leetcode.com/problems/copy-list-with-random-pointer/
+Video solution: https://www.youtube.com/watch?v=VNf6VynfpdM&ab_channel=takeUforward
 
 **Using HashMap**
 ```cpp
