--- a/DP/#08.Count_Coints.md
+++ b/DP/#08.Count_Coints.md
@@ -9,6 +9,28 @@ sum = 3;
 Answer - 3 Ways => {3}, {1,2}, {1,1,1}
 ```
 
+**Bottom Up - Memoized**
+```cpp
+int dp[10001][13];
+int helper(vector<int>& coins, int amount, int pos) {
+    if (amount == 0) return 0;
+    if (pos == coins.size()) return INT_MAX - 1;
+
+    if (dp[amount][pos] != -1) return dp[amount][pos];
+
+    if (coins[pos] <= amount)
+        return dp[amount][pos] = min(1 + helper(coins, amount - coins[pos], pos),
+                                     helper(coins, amount, pos + 1));
+
+    return dp[amount][pos] = helper(coins, amount, pos + 1);
+}
+int coinChange(vector<int>& coins, int amount) {
+    memset(dp, -1, sizeof(dp));
+    int ans =  helper(coins, amount, 0);
+    return ans == INT_MAX - 1 ? -1 : ans;
+}
+```
+
 **CPP - DP (Unbounded)**
 ```cpp
 int countCoins(int coin[], int sum, int n) {
