--- a/Trie/#03.DistinctSubstringsCount.md
+++ b/Trie/#03.DistinctSubstringsCount.md
@@ -1,8 +1,8 @@
-#### #03. Distinct Substrings Count
+#### #03. Distinct Substrings Count (No Duplicate)
 
 ```
-Input: abc
-Output: 7  -> {‘a’, ‘b’, ‘c’, “ab”, “bc”, “abc”, “” }
+Input: abab
+Output: 7  -> {" ", "a", "b", "ab", "aba", "bab", "abab"}
 ```
 
 **C++ Code**
