--- a/Trie/#06.SearchSuggestions.md
+++ b/Trie/#06.SearchSuggestions.md
@@ -69,13 +69,14 @@ public:
             trie.insert(product);
         
         vector<vector<string>> ans;
+        // keep track of each 'char' node 
         Node* node = trie.root;
         for(char& ch: sw){
             if(node != nullptr && node->containsKey(ch)){
                 node = node->get(ch);
                 ans.push_back(trie.suggest(node, 3));
             }else{
-                node = nullptr;
+                node = nullptr; //important for next 'char' not present.
                 ans.push_back({});
             }
         }
