--- a/Trie/#07.RemoveSubFolders.md
+++ b/Trie/#07.RemoveSubFolders.md
@@ -1,4 +1,4 @@
-#### #07. Remove Sub-Folders
+### #07. Remove Sub-Folders
 
 Problem Link: https://leetcode.com/problems/remove-sub-folders-from-the-filesystem/
 
