--- a/Trie/#11.CountPairsXORRange.md
+++ b/Trie/#11.CountPairsXORRange.md
@@ -1,6 +1,24 @@
 #### #11. Count Pairs XOR Range
 
 Leetcode Link: https://leetcode.com/problems/count-pairs-with-xor-in-a-range/
+Explanation: https://cpexplanations.blogspot.com/2021/03/1803-count-pairs-with-xor-in-range.html
+
+```
+Bit     Limit_bit  |  Action
+0          0       |  Cannot go to 1 subtree because 0^1=1 (bit ^ 1 subtree ) w/c is > limit_bit. 
+                      So we move to 0 subtree to find possible pairs with n.
+0          1       |  Count all in 0 subtree because 0^0=0 is strictly less than limit_bit (So all numbers in 0 subtree will be in limit). 
+                      Also, move to 1 subtree (0^1=1 <=limit_bit) to find possible pairs in that subtree.
+1          0       |  Cannot go to 0 subtree (1^0=1 >limit_bit). Move to 1 subtree (1^1=0 <=limit_bit) to find possible pairs.
+1          1       |  Count all in 1 subtree (1^1=0 is strictly less than limit_bit). Move to 0 subtree to find possible pairs.
+```
+
+Basic Step 
+- Bit  ^  Limit_bit = XOR. 
+- Just like before, We can choose the Bit to traverse as - 0 or 1. We chose this by checking XOR value (<= Limit_bit).
+- Otherwise XOR value bit being '1' will increase the number.
+- We only want the **`countPairsLessThanX`**.
+
 
 **C++ Code**
 ```cpp
