--- a/Graph/#02.DetectCycle.md
+++ b/Graph/#02.DetectCycle.md
@@ -46,3 +46,40 @@ bool hasCycle(int start) {
     return false;
 }
 ```
+
+**Kahn's Algorithm - BFS**
+```cpp
+void cycleCheck(vector<vector<int>>& graph, int n) {
+    vector<int> indegree(n);
+    queue<int> q;
+
+    //count indegrees
+    for (int i = 0; i < n; i++)
+        for (auto it : graph[i])
+            indegree[it]++;
+
+    //add non-dependent (0 indegree) to queue
+    for (int i = 0; i < n; i++)
+        if (indegree[i] == 0)
+            q.push(i);
+
+    int cnt = 0;  //counts topological ordered visits
+    vector<int> res;
+    while (!q.empty()) {
+        int node = q.front(); q.pop();
+        res.push_back(node);
+        cnt++;
+
+        for (int neighbour : graph[node]) {
+            indegree[neighbour]--;
+            if (indegree[neighbour] == 0)
+                q.push(neighbour);
+        }
+    }
+
+    if (cnt == n)
+        cout << "No cycle";
+    else
+        cout << "Cycle present";
+}
+```
