--- a/Graph/#03.ShortestPathUndirectedGraph.md
+++ b/Graph/#03.ShortestPathUndirectedGraph.md
@@ -1,7 +1,6 @@
-#### #03. Shortest Path To All Nodes (Undirected Graph)
+#### #03. Shortest Path To All Nodes
 
-<img width="536" alt="Screenshot 2022-04-20 at 12 26 34 PM" src="https://user-images.githubusercontent.com/27401142/164168828-ee95a321-65b9-47f8-9a30-5184e9a5440a.png">
-
+##### Undirected Graph
 **BFS**
 ```cpp
 void allNodesShortestPath(vector<vector<int>>& graph, int n) {
@@ -23,6 +22,50 @@ void allNodesShortestPath(vector<vector<int>>& graph, int n) {
         }
     }
 
-    //printVectors(dist); // 0 1 2 1 
+    //printVectors(dist);
 }
 ````
+##### Directed Acyclic Graph (DAG)
+
+<img width="591" alt="Screenshot 2022-04-20 at 1 57 13 PM" src="https://user-images.githubusercontent.com/27401142/164185207-cac795f3-0b4a-45bc-89fa-0b0bb402aad2.png">
+
+**BFS**
+```cpp
+stack<int> st;
+
+void getTopoOrder(vector<vector<pair<int, int>>> graph, vector<int>& visited, int start) {
+    visited[start] = 1;
+
+    for (auto neighbour : graph[start])
+        if (visited[neighbour.first] == 0)
+            getTopoOrder(graph, visited, neighbour.first);
+
+    st.push(start);
+}
+
+void shortestPathToAllNodes(int n, vector<vector<pair<int, int>>>& graph) {
+    vector<int> visited(n, 0);
+    for (int i = 0; i < n; i++)
+        if (visited[i] == 0)
+            getTopoOrder(graph, visited, i);
+
+    // cur stack<>: 0 4 5 1 2 3
+
+    vector<int> dist(n, INT_MAX);
+    int src = 0;
+    dist[src] = 0;
+
+    while (!st.empty()) {
+        int node = st.top(); st.pop();
+
+        if (dist[node] != INT_MAX) {
+            for (auto neighbour : graph[node]) {
+                if (dist[node] + neighbour.second < dist[neighbour.first])
+                    dist[neighbour.first] = dist[node] + neighbour.second;
+            }
+        }
+    }
+
+    printVectors(dist); // 0 2 3 6 1 5
+}
+```
