--- a/Graph/#05.MinimumSpanningTree.md
+++ b/Graph/#05.MinimumSpanningTree.md
@@ -6,6 +6,7 @@
 
 <img width="1334" alt="Screenshot 2022-04-21 at 10 40 55 AM" src="https://user-images.githubusercontent.com/27401142/164376726-948561c3-1e7c-4ae1-a2fa-e83ac3d71aa0.png">
 
+**Basic C++ Code**
 ```cpp
 int main(vector<vector<pair<int, int>>> graph, int n) {
     //initlize three arrays
@@ -36,6 +37,43 @@ int main(vector<vector<pair<int, int>>> graph, int n) {
             if (mstSet[v] == false && wt < key[v]) {
                 parent[v] = u;
                 key[v] = wt;
+            }
+        }
+    }
+
+    //printVectors(parent);
+}
+```
+
+**Optimized C++ Cod - Priority Queue**
+```cpp
+int main(vector<vector<pair<int, int>>> graph, int n) {
+    //initlize three arrays
+    vector<int> parent(n, -1);
+    vector<int> key(n, INT_MAX);
+    vector<bool> mstSet(n, false);
+
+    key[0] = 0; //edge weight
+    parent[0] = -1; //starting src
+
+    priority_queue<pair<int, int>, vector<pair<int, int>>, greater<pair<int, int>>> pq;
+    pq.push({0, 0});
+
+    // 0 node is calculated, now for rest (n-1) nodes
+    for (int cnt = 0; cnt < n - 1; cnt++) {
+        //easy find node with least edge wt
+        int u = pq.top().second;
+        pq.pop();
+
+        mstSet[u] = true;
+
+        for (auto it : graph[u]) {
+            int v = it.first;
+            int wt = it.second;
+            if (mstSet[v] == false && wt < key[v]) {
+                parent[v] = u;
+                key[v] = wt;
+                pq.push({wt, v});
             }
         }
     }
