--- a/Graph/#05.MinimumSpanningTree.md
+++ b/Graph/#05.MinimumSpanningTree.md
@@ -1,10 +1,15 @@
-#### #05. Minimum Spanning Tree (MST)
+### #05. Minimum Spanning Tree (MST)
 
 - MST is a tree from a graph which has the minimum cost of edges and can reach every node from every other node
 - Will have N nodes and (N-1) edges, **no cycles present**
 - Can be done using two algos - **Prim's Algorithm, Kruskal's Algorithm**
 
 <img width="1334" alt="Screenshot 2022-04-21 at 10 40 55 AM" src="https://user-images.githubusercontent.com/27401142/164376726-948561c3-1e7c-4ae1-a2fa-e83ac3d71aa0.png">
+
+<img width="1334" alt="Screenshot 2022-04-21 at 10 40 60 AM" src="https://user-images.githubusercontent.com/27401142/164518030-755dc3d1-c309-4e1f-9324-ae1cda822dda.png">
+
+
+### Prim's Algorithm
 
 **Basic C++ Code**
 ```cpp
@@ -45,7 +50,7 @@ int main(vector<vector<pair<int, int>>> graph, int n) {
 }
 ```
 
-**Optimized C++ Cod - Priority Queue**
+**Optimized C++ Code - Priority Queue**
 ```cpp
 int main(vector<vector<pair<int, int>>> graph, int n) {
     //initlize three arrays
@@ -82,5 +87,68 @@ int main(vector<vector<pair<int, int>>> graph, int n) {
 }
 ```
 
-![Screenshot 2022-04-21 at 11 03 52 PM](https://user-images.githubusercontent.com/27401142/164518030-755dc3d1-c309-4e1f-9324-ae1cda822dda.png)
+### Prim's Algorithm
+- Priority queue - min heap of (wt, u, v)
+- Pick least wt edge and connect to MST (check no cycle)
 
+```cpp
+struct Node {
+    int u, v, wt;
+    Node(int edge1, int edge2, int weight) {
+        u = edge1;
+        v = edge2;
+        wt = weight;
+    }
+};
+
+vector<int> parent;
+vector<int> myrank;
+
+int findParent(int u) {
+    if (u == parent[u])
+        return u;
+    return parent[u] = findParent(parent[u]);
+}
+
+void setUnion(int u, int v) {
+    u = findParent(u);
+    v = findParent(v);
+
+    if (myrank[u] < myrank[v])
+        parent[u] = v;
+    else if (myrank[v] < myrank[u])
+        parent[v] = u;
+    else {
+        parent[v] = u;
+        myrank[u]++;
+    }
+}
+
+void primsAlgoMST(vector<Node> edgeList, int n) {
+    parent.resize(n);
+    myrank.resize(n);
+
+    for (int i = 0; i < n; i++)
+        parent[i] = i;
+
+    // sort by "wt" min heap - since (wt, u, v)
+    sort(edgeList.begin(), edgeList.end(), [&](Node & a, Node & b) {
+        return a.wt < b.wt;
+    });
+
+    int totCost = 0;
+    vector<pair<int, int>> mst;
+    for (auto node : edgeList) {
+        if (findParent(node.u) != findParent(node.v)) {
+            totCost += node.wt;
+            
+            setUnion(node.u, node.v);
+            mst.push_back({node.u, node.v});
+        }
+    }
+
+    // cout << totCost << endl;
+    // for (auto p : mst)
+    //    cout << p.first << " - " << p.second << endl;
+}
+```
