--- a/Graph/#05.MinimumSpanningTree.md
+++ b/Graph/#05.MinimumSpanningTree.md
@@ -90,6 +90,7 @@ int main(vector<vector<pair<int, int>>> graph, int n) {
 ### Prim's Algorithm
 - Priority queue - min heap of (wt, u, v)
 - Pick least wt edge and connect to MST (check no cycle)
+- Time Complexity = O(MLogM) + O(M*4α) = ~O(NLogN) 
 
 ```cpp
 struct Node {
