--- a/Graph/#05.MinimumSpanningTree.md
+++ b/Graph/#05.MinimumSpanningTree.md
@@ -87,7 +87,7 @@ int main(vector<vector<pair<int, int>>> graph, int n) {
 }
 ```
 
-### Prim's Algorithm
+### Kruskal's Algorithm
 - Priority queue - min heap of (wt, u, v)
 - Pick least wt edge and connect to MST (check no cycle)
 - Time Complexity = O(MLogM) + O(M*4α) = ~O(NLogN) 
@@ -125,7 +125,7 @@ void setUnion(int u, int v) {
     }
 }
 
-void primsAlgoMST(vector<Node> edgeList, int n) {
+void kruskalsAlgoMST(vector<Node> edgeList, int n) {
     parent.resize(n);
     myrank.resize(n);
 
