--- a/Graph/#10.BipartiteGraph-ColoringAlgo.md
+++ b/Graph/#10.BipartiteGraph-ColoringAlgo.md
@@ -1,5 +1,7 @@
 ### #10. Bipartite Graph - Coloring Algorithm
 - Bipartite Graph - Graph that can be colored using 2 colors such that no two adjacent nodes have same color.
+- Graph **with odd cycle - cannot be bipartite**
+- Even cycle or open graph are bipartite
 
 **BFS Coloring Algo**
 ```cpp
@@ -35,11 +37,35 @@ bool isBipartite(vector<vector<int>>& graph, int n) {
     }
     return true;
 }
+```
 
-void coloringAlgorithm(int n, vector<vector<int>>& graph) {
-    if (isBipartite(graph, n))
-        cout << "Yes" << endl;
-    else
-        cout << "No" << endl;
+**DFS Coloring Algo**
+```cpp
+vector<int> colors;
+
+bool dfs(int node, vector<vector<int>>& graph) {
+    if (colors[node] == -1)
+        colors[node] = 1;
+
+    for (int child : graph[node]) {
+        if (colors[child] == -1) {
+            colors[child] = 1 - colors[node];
+            if (!dfs(child, graph))
+                return false;
+        } else if (colors[child] == colors[node])
+            return false;
+    }
+
+    return true;
+}
+
+bool isBipartite(vector<vector<int>>& graph, int n) {
+    colors.resize(n, -1);
+    for (int i = 0; i < n; ++i) {
+        if (colors[i] == -1)
+            if (!dfs(i, graph))
+                return false;
+    }
+    return true;
 }
 ```
