--- a/Graph/#04.DijkstrasAlgorithm.md
+++ b/Graph/#04.DijkstrasAlgorithm.md
@@ -16,10 +16,10 @@ void dijkstraAlgo(vector<vector<pair<int, int>>>& graph, int n) {
         int prev = pq.top().second;
         pq.pop();
 
-        for (auto it : graph[prev]) {
-            if (prevDist + it.second < dist[it.first]) {
-                dist[it.first] = prevDist + it.second;
-                pq.push({dist[it.first], it.second});
+        for (auto &[child, d] : graph[prev]) {
+            if (prevDist + d < dist[child]) {
+                dist[child] = prevDist + d;
+                pq.push({dist[child], child});
             }
         }
     }
