--- a/Graph/#05.MinimumSpanningTree.md
+++ b/Graph/#05.MinimumSpanningTree.md
@@ -62,7 +62,7 @@ int main(vector<vector<pair<int, int>>> graph, int n) {
     parent[0] = -1; //starting src
 
     priority_queue<pair<int, int>, vector<pair<int, int>>, greater<pair<int, int>>> pq;
-    pq.push({0, 0});
+    pq.push({0, 0});  // (wt, u)
 
     // 0 node is calculated, now for rest (n-1) nodes
     for (int cnt = 0; cnt < n - 1; cnt++) {
