--- a/Graph/#05.MinimumSpanningTree.md
+++ b/Graph/#05.MinimumSpanningTree.md
@@ -9,7 +9,15 @@
 <img width="1334" alt="Screenshot 2022-04-21 at 10 40 60 AM" src="https://user-images.githubusercontent.com/27401142/164518030-755dc3d1-c309-4e1f-9324-ae1cda822dda.png">
 
 
+> Kruskal time complexity worst case is O(E log E),this because we need to sort the edges.
+
+> Prim time complexity worst case is O(E log V) with priority queue.
+
+(https://stackoverflow.com/questions/1195872/when-should-i-use-kruskal-as-opposed-to-prim-and-vice-versa)
+
 ### Prim's Algorithm
+
+(Use Prim's algorithm when you have a graph with **lots of edges**)
 
 **Basic C++ Code**
 ```cpp
@@ -153,3 +161,8 @@ void kruskalsAlgoMST(vector<Node> edgeList, int n) {
     //    cout << p.first << " - " << p.second << endl;
 }
 ```
+
+![6RCFr](https://user-images.githubusercontent.com/27401142/165589269-f320874d-35f6-43a0-bdd1-b803d139c96c.gif)
+
+![KofyW](https://user-images.githubusercontent.com/27401142/165589283-9f60a3b9-991e-472e-b98a-2260cbaa38ab.gif)
+
