--- a/Graph/#12.SmallestStringSwap.md
+++ b/Graph/#12.SmallestStringSwap.md
@@ -47,3 +47,41 @@ string smallestStringWithSwaps(string s, vector<vector<int>>& pairs) {
     return s;
 }
 ```
+
+**Union Find**
+```cpp
+vector<int> parent;
+int findParent(int node){
+    if(node == parent[node]) return node;
+    return parent[node] = findParent(parent[node]);
+}
+void setUnion(int u, int v){
+    u = findParent(u);
+    v = findParent(v);
+
+    //set to the same componenet group
+    if(u != v) parent[u] = v;
+}
+string smallestStringWithSwaps(string s, vector<vector<int>>& pairs) {
+    int n = s.size();
+    parent.resize(n);
+
+    for(int i=0; i<n; i++) parent[i] = i;
+    for(auto& pair: pairs)
+        setUnion(pair[0], pair[1]);
+
+    //map index -> group component (choose least minheap char)
+    map<int, priority_queue<char, vector<char>, greater<char>>> mp;
+    for(int i=0; i<n; i++){
+        int root = findParent(i);
+        mp[root].push(s[i]);
+    }
+
+    for(int i=0; i<n; i++){
+        int node = parent[i];
+        s[i] = mp[node].top(); mp[node].pop();
+    }
+
+    return s;
+}
+```
