--- a/Arrays/#39.TotalAppealofAString.md
+++ b/Arrays/#39.TotalAppealofAString.md
@@ -12,6 +12,14 @@ Input: s = "abbca"
 Output: 28
 ```
 
+**Regarding the distinct characters counting**:
+- We are basically checking each 'characters' contribution to its created substrings.
+- If there is a repeating character later on, you will see that the `repeating character`'s contribution would be double-counted - if you take all of its substrings contribution. (see 2nd image)
+- Since we want just the distinct character count (and not repeated counts), we count only substrings formed from `next index` of prev occurred character.
+
+<img width="700px" src="https://i.imgur.com/jUnljbt.png">
+<img width="700px" src="https://i.imgur.com/pboTlSJ.png">
+
 **Easy Method**
 ```cpp
 long long appealSum(string s) {
@@ -44,7 +52,17 @@ long long appealSum(string s) {
 }
 ```
 
-**Atmost K Trick**
+#### Atmost K Trick
+
+The **(i+1)** = new characters added = also count of new substrings added.
+Here we are reducing those newly added characters (from prev index) - since it's result is already accumulated - thus we get only the new distinct characters count at repeating characters index.
+
+Eg. At index 4, we are adding **5 new 'b' chars**, but we had counted the 'b' at index 2, and is seen here at `bcab & abcab` substrings. This would get redundant if we count again. So we reduce the new added 'b' chars count => (5 - 2) = 3.
+					
+<img width="800px" src="https://i.imgur.com/Rn4t9F0.png">
+
+P.S. You will understand if you read this similar question illustrated solution: https://leetcode.com/problems/count-unique-characters-of-all-substrings-of-a-given-string/discuss/1376543/Java-oror-O(n)-time-oror-Easy-Explanation
+
 ```cpp
 using ll = long long;
 
